[project]
name = "traversable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=5.0.0.93",
    "pytorchcv>=0.0.74",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "transformers>=5.13.1",
    "ultralytics>=8.4.94",
]
